environments/staging/flux-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
  name: noticegen-deployment
  namespace: staging
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: noticegen
      containers:
      - image: docker.io/modeseven/noticegen:f0de8313825b72772b89a392908a0606caa5716b
        name: noticegen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
  name: scheduler-api
  namespace: staging
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: scheduler-api
      containers:
      - image: docker.io/modeseven/scheduler-api:3250cd7d11ea85709256a82fec7926d4eae54c5e
        name: scheduler-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
  name: scheduler-ui
  namespace: staging
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: scheduler-ui
      containers:
      - image: docker.io/modeseven/scheduler-ui:fff16f0162c397ea53a24d381ce25c2d8ced1ad0
        name: scheduler-ui
