environments/staging/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: scheduler-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 1M
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - scheduler-dev.mbegley.net
      secretName: scheduler-dev-mbegley-net-tls
  rules:
    - host: scheduler-dev.mbegley.net
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: scheduler-ui
                port:
                  number: 80
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: scheduler-api
                port:
                  number: 8080
          - path: /ng/?(.*)
            pathType: Prefix
            backend:
              service:
                name: noticegen
                port:
                  number: 8080
